[package]
name = "exchange_interface"
version = "0.0.1"
edition = "2021"

[dependencies]
async-trait = "0.1"
base64 = "0.13"
cucumber = { version = "0.13", features = ["output-json"] }
dotenv = "0.15.0"
hmac = "0.10"
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.9.2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1", features = ["full"] }

[dependencies.objects]
path = "./objects"

[build-dependencies]
dotenv-build = "0.1"

